--- a/index.html
+++ b/index.html
@@ -1,64 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Resume - Uday Kiran</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: #fff;
+      background: #fafafa;
       margin: 0;
       padding: 0;
       color: #333;
     }
     .container {
-      max-width: 800px;
+      max-width: 850px;
       margin: auto;
-      padding: 20px;
+      padding: 30px 20px;
     }
-    h1, h2 {
+    h1 {
       color: #1976d2;
     }
-    .section {
-      margin-top: 20px;
+    h2 {
+      border-bottom: 2px solid #1976d2;
+      padding-bottom: 5px;
+      margin-top: 30px;
     }
     ul {
       padding-left: 20px;
+    }
+    a {
+      color: #1976d2;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    .links a {
+      margin-right: 15px;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>Bhupathi Uday Kiran</h1>
-    <p>Email: udaykiranbhupathi5@gmail.com | LinkedIn: linkedin.com/in/uday-kiran-8a9781235</p>
-
-    <div class="section">
-      <h2>Profile</h2>
-      <p>Full Stack Developer (MERN Stack, Java) with experience building ecommerce applications and scalable platforms.</p>
+    <div class="links">
+      <a href="mailto:udaykiranbhupathi5@gmail.com" target="_blank">Email</a>
+      <a href="https://www.linkedin.com/in/uday-kiran-8a9781235/" target="_blank">LinkedIn</a>
+      <a href="https://github.com/Kiranudaybhupathi" target="_blank">GitHub</a>
     </div>
 
-    <div class="section">
-      <h2>Skills</h2>
-      <ul>
-        <li>MongoDB, Express.js, React.js, Node.js</li>
-        <li>HTML, CSS, JavaScript</li>
-        <li>Git, GitHub, Deployment (Render, Vercel)</li>
-      </ul>
-    </div>
+    <h2>Profile</h2>
+    <p>Full Stack Developer (MERN Stack, Java) passionate about building scalable web applications and intuitive user experiences.</p>
 
-    <div class="section">
-      <h2>Experience</h2>
-      <p><strong>Freelance Developer</strong> – Built full-stack ecommerce applications with cart, auth, payments</p>
-    </div>
+    <h2>Skills</h2>
+    <ul>
+      <li>MERN Stack: MongoDB, Express.js, React.js, Node.js</li>
+      <li>Frontend: HTML, CSS, JavaScript, Tailwind, Bootstrap</li>
+      <li>Tools: Git, GitHub, VS Code, Postman</li>
+      <li>Deployment: Vercel, Render, GitHub Pages</li>
+    </ul>
 
-    <div class="section">
-      <h2>Projects</h2>
-      <ul>
-        <li><strong>Ecommerce Platform:</strong> Full MERN stack with admin dashboard, payments</li>
-        <li><strong>Portfolio Website:</strong> React-based portfolio hosted on GitHub Pages</li>
-      </ul>
-    </div>
+    <h2>Experience</h2>
+    <p><strong>Freelance Developer</strong> – Built and deployed full-stack ecommerce platforms with features like user authentication, cart functionality, payment integration, and admin dashboards.</p>
+
+    <h2>Projects</h2>
+    <ul>
+      <li>
+        <strong>Ecommerce Website</strong> – Full MERN stack project with live demo:
+        <br />
+        🔗 <a href="https://kiranudaybhupathi.github.io/Ecommerce-/" target="_blank">
+          Live Project - Ecommerce Website
+        </a>
+      </li>
+      <li>
+        <strong>Portfolio Website</strong> – Modern personal portfolio built with React and hosted on GitHub Pages.
+      </li>
+    </ul>
   </div>
 </body>
 </html>
