--- a/index.html
+++ b/index.html
@@ -3,80 +3,151 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Resume - Uday Kiran</title>
+  <title>Bhupathi Uday Kiran | Full Stack Developer</title>
   <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #fafafa;
+    * {
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: #f0f4f8;
       color: #333;
+      line-height: 1.6;
     }
+
+    header {
+      background: #1976d2;
+      color: white;
+      padding: 40px 20px;
+      text-align: center;
+    }
+
+    header h1 {
+      margin-bottom: 10px;
+      font-size: 2.5em;
+    }
+
+    .links a {
+      margin: 0 10px;
+      color: #fff;
+      font-weight: bold;
+      text-decoration: none;
+      border-bottom: 2px solid transparent;
+      transition: 0.3s;
+    }
+
+    .links a:hover {
+      border-color: #fff;
+    }
+
     .container {
-      max-width: 850px;
-      margin: auto;
-      padding: 30px 20px;
+      max-width: 1000px;
+      margin: 40px auto;
+      padding: 0 20px;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-    h1 {
-      color: #1976d2;
+
+    section {
+      padding: 30px 0;
+      border-bottom: 1px solid #ddd;
     }
+
+    section:last-child {
+      border-bottom: none;
+    }
+
     h2 {
-      border-bottom: 2px solid #1976d2;
-      padding-bottom: 5px;
-      margin-top: 30px;
+      color: #1976d2;
+      margin-bottom: 10px;
+      border-left: 4px solid #1976d2;
+      padding-left: 10px;
     }
+
     ul {
       padding-left: 20px;
+      list-style: disc;
     }
+
     a {
       color: #1976d2;
       text-decoration: none;
     }
+
     a:hover {
       text-decoration: underline;
     }
-    .links a {
-      margin-right: 15px;
-      font-weight: bold;
+
+    .project-link {
+      display: inline-block;
+      margin-top: 5px;
+    }
+
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 1.8em;
+      }
+
+      .links {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="container">
+
+  <header>
     <h1>Bhupathi Uday Kiran</h1>
     <div class="links">
       <a href="mailto:udaykiranbhupathi5@gmail.com" target="_blank">Email</a>
       <a href="https://www.linkedin.com/in/uday-kiran-8a9781235/" target="_blank">LinkedIn</a>
       <a href="https://github.com/Kiranudaybhupathi" target="_blank">GitHub</a>
     </div>
+  </header>
 
-    <h2>Profile</h2>
-    <p>Full Stack Developer (MERN Stack, Java) passionate about building scalable web applications and intuitive user experiences.</p>
+  <div class="container">
 
-    <h2>Skills</h2>
-    <ul>
-      <li>MERN Stack: MongoDB, Express.js, React.js, Node.js</li>
-      <li>Frontend: HTML, CSS, JavaScript, Tailwind, Bootstrap</li>
-      <li>Tools: Git, GitHub, VS Code, Postman</li>
-      <li>Deployment: Vercel, Render, GitHub Pages</li>
-    </ul>
+    <section>
+      <h2>Profile</h2>
+      <p>Full Stack Developer (MERN Stack, Java) passionate about building scalable web applications and intuitive user experiences.</p>
+    </section>
 
-    <h2>Experience</h2>
-    <p><strong>Freelance Developer</strong> – Built and deployed full-stack ecommerce platforms with features like user authentication, cart functionality, payment integration, and admin dashboards.</p>
+    <section>
+      <h2>Skills</h2>
+      <ul>
+        <li>MERN Stack: MongoDB, Express.js, React.js, Node.js</li>
+        <li>Frontend: HTML, CSS, JavaScript, Tailwind, Bootstrap</li>
+        <li>Tools: Git, GitHub, VS Code, Postman</li>
+        <li>Deployment: Vercel, Render, GitHub Pages</li>
+      </ul>
+    </section>
 
-    <h2>Projects</h2>
-    <ul>
-      <li>
-        <strong>Ecommerce Website</strong> – Full MERN stack project with live demo:
-        <br />
-        🔗 <a href="https://kiranudaybhupathi.github.io/Ecommerce-/" target="_blank">
-          Live Project - Ecommerce Website
-        </a>
-      </li>
-      <li>
-        <strong>Portfolio Website</strong> – Modern personal portfolio built with React and hosted on GitHub Pages.
-      </li>
-    </ul>
+    <section>
+      <h2>Experience</h2>
+      <p><strong>Freelance Developer</strong> – Built and deployed full-stack ecommerce platforms with features like user authentication, cart functionality, payment integration, and admin dashboards.</p>
+    </section>
+
+    <section>
+      <h2>Projects</h2>
+      <ul>
+        <li>
+          <strong>Ecommerce Website</strong> – Full MERN stack project.
+          <br />
+          <a href="https://kiranudaybhupathi.github.io/Ecommerce-/" target="_blank" class="project-link">🔗 Live Project</a>
+        </li>
+        <li>
+          <strong>Portfolio Website</strong> – Modern personal portfolio built with React and hosted on GitHub Pages.
+        </li>
+      </ul>
+    </section>
+
   </div>
+
 </body>
 </html>
