--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <title>Bhupathi Uday Kiran | Full Stack Developer</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
+    :root {
+      --primary: #1976d2;
+      --primary-dark: #0f4c81;
+      --bg: #f4f7fa;
+      --text: #333;
+      --white: #fff;
+    }
+
     * {
       margin: 0;
       padding: 0;
@@ -15,14 +23,14 @@
 
     body {
       font-family: 'Inter', sans-serif;
-      background: #f4f7fa;
-      color: #333;
+      background: var(--bg);
+      color: var(--text);
       line-height: 1.6;
     }
 
     header {
-      background: #1976d2;
-      color: white;
+      background: linear-gradient(135deg, #1976d2, #0f4c81);
+      color: var(--white);
       padding: 80px 20px 60px;
       text-align: center;
     }
@@ -30,11 +38,13 @@
     header h1 {
       font-size: 3em;
       margin-bottom: 10px;
+      animation: fadeIn 1s ease-out;
     }
 
     .subtitle {
       font-size: 1.2em;
       margin-bottom: 20px;
+      opacity: 0.9;
     }
 
     .nav-links {
@@ -42,16 +52,16 @@
     }
 
     .nav-links a {
-      margin: 0 12px;
-      font-weight: bold;
-      color: #fff;
+      margin: 0 10px;
+      font-weight: 600;
+      color: var(--white);
       text-decoration: none;
       border-bottom: 2px solid transparent;
-      transition: 0.3s;
+      transition: 0.3s ease;
     }
 
     .nav-links a:hover {
-      border-color: #fff;
+      border-color: var(--white);
     }
 
     .container {
@@ -63,57 +73,67 @@
     section {
       padding: 60px 0;
       border-bottom: 1px solid #ddd;
-    }
-
-    section:last-child {
-      border-bottom: none;
+      animation: fadeInUp 0.8s ease-out;
     }
 
     h2 {
-      color: #1976d2;
+      color: var(--primary);
       font-size: 2em;
       margin-bottom: 20px;
-      border-left: 5px solid #1976d2;
+      border-left: 5px solid var(--primary);
       padding-left: 15px;
     }
 
-    ul {
-      padding-left: 25px;
-      list-style: disc;
-    }
-
-    a {
-      color: #1976d2;
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
     .card {
-      background: white;
-      border-radius: 10px;
-      padding: 20px;
-      margin-bottom: 20px;
+      background: var(--white);
+      border-radius: 12px;
+      padding: 25px;
+      margin-bottom: 25px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.05);
-      transition: 0.3s;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
     .card:hover {
-      box-shadow: 0 6px 18px rgba(0,0,0,0.1);
+      transform: translateY(-6px);
+      box-shadow: 0 10px 24px rgba(0,0,0,0.08);
     }
 
     .project-link {
       display: inline-block;
       margin-top: 10px;
-      color: #1976d2;
+      color: var(--primary);
       font-weight: 600;
     }
 
+    ul {
+      padding-left: 20px;
+      list-style: disc;
+    }
+
+    .skills-list li {
+      margin-bottom: 10px;
+    }
+
+    .badge {
+      display: inline-block;
+      margin: 5px 8px 0 0;
+      padding: 5px 12px;
+      background-color: #e3f2fd;
+      border-radius: 20px;
+      color: var(--primary);
+      font-size: 0.9em;
+      font-weight: 600;
+    }
+
+    .projects-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 20px;
+    }
+
     footer {
-      background: #0f4c81;
-      color: white;
+      background: #0d3a60;
+      color: var(--white);
       text-align: center;
       padding: 30px 20px;
       font-size: 0.9em;
@@ -134,6 +154,16 @@
         gap: 10px;
       }
     }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes fadeInUp {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
   </style>
 </head>
 <body>
@@ -149,7 +179,6 @@
   </header>
 
   <div class="container">
-
     <section id="profile">
       <h2>Profile</h2>
       <div class="card">
@@ -160,12 +189,16 @@
     <section id="skills">
       <h2>Skills</h2>
       <div class="card">
-        <ul>
-          <li><strong>MERN Stack:</strong> MongoDB, Express.js, React.js, Node.js</li>
-          <li><strong>Frontend:</strong> HTML, CSS, JavaScript, Tailwind, Bootstrap</li>
-          <li><strong>Tools:</strong> Git, GitHub, VS Code, Postman</li>
-          <li><strong>Deployment:</strong> Vercel, Render, GitHub Pages</li>
-        </ul>
+        <div class="badge">MongoDB</div>
+        <div class="badge">Express.js</div>
+        <div class="badge">React.js</div>
+        <div class="badge">Node.js</div>
+        <div class="badge">Tailwind</div>
+        <div class="badge">Bootstrap</div>
+        <div class="badge">Git</div>
+        <div class="badge">Postman</div>
+        <div class="badge">Render</div>
+        <div class="badge">Vercel</div>
       </div>
     </section>
 
@@ -179,20 +212,18 @@
 
     <section id="projects">
       <h2>Projects</h2>
-
-      <div class="card">
-        <h3>Ecommerce Website</h3>
-        <p>Complete MERN stack application with user login, cart, payment, and admin features.</p>
-        <a href="https://kiranudaybhupathi.github.io/Ecommerce-/" target="_blank" class="project-link">🔗 Live Project</a>
+      <div class="projects-grid">
+        <div class="card">
+          <h3>Ecommerce Website</h3>
+          <p>Complete MERN stack application with user login, cart, payment, and admin features.</p>
+          <a href="https://kiranudaybhupathi.github.io/Ecommerce-/" target="_blank" class="project-link">🔗 Live Project</a>
+        </div>
+        <div class="card">
+          <h3>Portfolio Website</h3>
+          <p>Modern portfolio website built with React.js and deployed on GitHub Pages.</p>
+        </div>
       </div>
-
-      <div class="card">
-        <h3>Portfolio Website</h3>
-        <p>Modern portfolio website built with React.js and deployed on GitHub Pages.</p>
-      </div>
-
     </section>
-
   </div>
 
   <footer>
